css/style.css
* {
    margin: 0px;
    padding: 0;
    box-sizing: border-box;

}

html {
    margin: 0px;
    font-size: 62.5%;
}

body {
    background-color: #08090c;
    font-family: 'Source Sans Pro', sans-serif;
    color: #F4E5D5;
    font-size: 1.8rem;
    font-weight: 400;
    line-height: 2.4rem;
    font-kerning: auto;
    margin: 0px;
    width: 100%;
}

.wrapper {
    width: 80%;
    max-width: 1364px;
    margin: 0 auto;
}

header {
    height: 10rem;
    /*border-bottom: 1px solid #F5CA9B;*/
    margin-bottom: 64px;

}

header.index {
    background-color: #08090c;
   /*border-bottom: 1px solid #F5CA9B;*/
   height: 100vh;
}

@media (min-width: 1024px) {
#logo {
    width: 30rem;
    min-width: 15rem;
    padding-top: 20vh;
   margin: 0 auto;
}
}
/*******************************************/
/* layout styling*/
/*******************************************/

h1,
h2,
h3,
h4,
h5 {
    color: #F5CA9B;
    line-height: 1.4;
}

h1 {
    font-size: 3.0rem;
    font-family: linotype-didot, serif;
    font-weight: 700;
    font-style: normal;
    margin: 0;
    padding:  0;
}

h2 {
    font-family: linotype-didot, serif;
    font-size: 2.8rem;
    font-weight: 400;
    margin: 0 0 24px 0;
}

h3 {
    font-family: linotype-didot, serif;
    font-size: 2.6rem;
    font-weight: 400;
    margin: 0 0 16px 0;
    width: 100%;
}

h4 {
    font-family: linotype-didot, serif;
    font-size: 2.2rem;
    font-weight: 400;
    margin: 0 0 24px 0;
}

h5 {
    font-family: linotype-didot, serif;
    font-size: 1.8rem;
    font-weight: 400;
}

.small-bodytext {
    font-size: 1.2rem;
    font-weight: 300;
    padding: 0 5px 0 0;
  display: inline-block

}


.text-uppercase {
    text-transform: uppercase;
}

.text-centered {
    text-align: center;
    margin: 0;
}

ul {
    list-style: none;
}


a {
    color: #8ea1d2fe;
    text-decoration: none;
    font-size: 1.8rem;
}

a:focus {
    color: #a9b2cbfe;
}

a:hover {
    color: #a9b2cbfe;
}


a:visited {
    color: #a9b2cbfe;

}

a:active {
    text-decoration: underline;
    color: #bcceed;
}

header>nav {
    min-height: min-content;
    padding-top: 5vh;
    list-style: none;
}

.nav ul li {
    display: inline-block;
    padding: 0 15px 0 0;
}

.nav ul li>a {
    color: #F4E5D5;
    font-size: 1.6rem;
    font-weight: 300;
    display: inline-block;
}

.nav:hover {
    font-weight: 600;
}

.nav:focus {
    font-weight: 600;
}

.nav#home {
    color: #F5CA9B;
    font-size: 1.6rem;
    font-weight: 400;
    text-decoration: underline;
    padding-left: 0;
}

.nav#about {
    color: #F5CA9B;
    font-size: 1.6rem;
    font-weight: 400;
    text-decoration: underline;
}


@media only screen and (min-width: 640px) {
    .hidden-on-desktop {
        display: none;
    }

}

img {
    width: 100%;
}

/**************************************************
 Container for each section on page 
************************************************* */
.row {
    margin: 56px 0;
} 

.section p {
    padding: 0 0 8px;
    width: 100%;
}

.columns {
    flex-basis: 100%;
    display: flex;
    justify-content: space-between;
    /*justify-self: center;*/
   
}


.column-content {
    padding: 0 5% 0 0;
    margin-bottom: 24px;
    max-width: 48%;
}

.column-50 {
    width: 48%;
    max-width: 651px;
    justify-content: space-between;
} /***** Gutter width 4% *******/

/*.container-50 {
display: inline-block;
width: 48%;

}*/
.center-element {
    display: flex;
    justify-content: center;
}


/*******************************************/
/* layout index*/
/*******************************************/

.images-home {
    margin-bottom: 24px;
}

/*******************************************/
    /* layout projects*/
/*******************************************/
.section {
    margin-bottom: 64px;
}

.body-text-row  {
margin-bottom: 64px;
}
.body-text-row p {
margin-bottom: 16px;
}
.body-text-row li {
margin-bottom: 16px;
}

.img-projects {
   margin-bottom: 32px;
}
/**** GCF***/

.box-gradient {
    width: 100%;
    margin: 0 auto 32px;
    
}
.box-primes {
 height: 48px;
 background-image: linear-gradient(to right, #FAF5F0, #F0E3DA, #F9BDCA, #F48BA2 );

} 
.box-neutral {
 height: 48px;
 background-image: linear-gradient(to right, #FFFFFF, #BEB3BE, #694F68);

} 

.color-ellipses {
    width: 90px;
        height: 90px;
    background-color: #E693A5;
      background-color: #E693A5;
 border-radius: 50%;
 display: inline-block;
 }

 .primes-1 {
    background-color: #FAF7F5;
    margin-right: -10%;
    }
    
.primes-2 {
    background-color: #F0E3DA;
    
    }
    

.seconds-1 {
background-color: #E693A5;
margin-right: -10%;
}

.seconds-2 {
background-color: #F48BA2;

}

.container-color-swatches {
    display: flex;
    justify-content: space-between;
}
.container-color-swatches p {
    padding-top: 1.5%;
}
  
.neutral-1 {
    background-color: #ffffff;
}

.neutral-2 {
background-color: #BEB3BE;
}

.neutral-3 {
    background-color: #694F68;
}

.box-accent {
    height: 32px;
    width: 100%;
    max-width: 651px;
  margin: 0;
  background-color: #9FE0E0 ;
} 
.column-50 h4 {
    margin-bottom: 8px;
   
}

/*******************************************/
/* layout aag*/
/*******************************************/



/*******************************************/
/* layout about*/
/*******************************************/

#about-page .columns {
    padding: 24px 0 8px;
}

/*******************************************/
/* GO Cruelty Free Project*/
/*******************************************/




/*******************************************/
/* Button & Footer*/
/*******************************************/


.container-button {
    width: 43%;
    min-width: 161px;
   max-width: 544px;
    left: 50%;
    right: 50%;
    transform: translatex(-50%);
    position: relative;
    margin: 48px 0 96px;
}

.button-resume {
    display: inline-block;
    max-width: 544px;
    width: 100%;
    border: 1px solid #F5CA9B;
    background-color: transparent;
    font-weight: 400;
    text-align: center;
    padding: 4px;
    border-radius: 6px;
   

}
.container-button .button-resume {
    color: #F5CA9B;
}

.button-resume:focus {
    background-color: #F5CA9B;
    color: #08090c;
}

.button-resume:hover {
    background-color: #F5CA9B;
    color: #08090c;
}



/**********************************
	Footer
************************************/

.footer a {
    padding: 16px 0 8px;

}

.footer h4 {
    padding: 32px 0 24px 0;
    margin: 0;
}

.footer {
    border-top: 1px solid #F5CA9B;
    width: 100%;
 
}

.footer-content {
    width: 80%;
    margin: 0 auto;
}

.footer p {
    padding: 0 0 8px;
    left: 0;
    margin: 0;
   }

.social-icons>a {
    width: 32px;
    height: 32px;
    margin: 0px 16px 32px 0;
    display: inline-block;
    position: relative;
}

